# Chinook

./: Makefile  README.md  pyproject.toml
chinook_moloud_aram/: __init__.py  dataset.py  features.py  plots.py
chinook_moloud_aram/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Moloud_Aram- phase1.sql  chinook.ipynb
