[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chinook_moloud_aram"
version = "0.0.1"
description = "Chinook: A sample database for SQL practice and learning, featuring data from a digital media store, including artists, albums, tracks, and invoices. Perfect for honing database management and query skills."
authors = [
  { name = "Moloud Aram" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.2"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["chinook_moloud_aram"]
force_sort_within_sections = true
